@@ -1,5 +1,10 @@
 2000-01-31  Havoc Pennington  <hp@redhat.com>
 
+	* wrappers/gtk/gconf-client.c (check_type): include name of the
+	key with the wrong type in the error message
+
+2000-01-31  Havoc Pennington  <hp@redhat.com>
+
 	* wrappers/gtk/gconf-client.c
 	(gconf_client_real_unreturned_error): only handle the error if the
 	mode is GCONF_CLIENT_HANDLE_UNRETURNED
